roles/kubevirt/templates/kubevirt-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager
  namespace: nginx-ingress
  labels:
    app: kubevirt-manager
    kubevirt-manager.io/version: 1.4.1
  annotations:
    nginx.org/location-snippets: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection $connection_upgrade;
spec:
  ingressClassName: kubevirt-ingress-class
  tls:
   - hosts:
     - kubevirt.jtest.pivotal.io
  rules:
  - host: kubevirt.jtest.pivotal.io
    http:
      paths:
      - path: /kubevirt-manager
        pathType: Prefix
        backend:
          service:
            name: kubevirt-manager
            port:
              number: 8080
